codepay ecr-hub

--- a/src/main/resources/com/example/ecrhub/fxml/home.fxml
+++ b/src/main/resources/com/example/ecrhub/fxml/home.fxml
@@ -21,10 +21,10 @@
                 <Font size="24.0"/>
             </font>
         </Button>
-        <Button mnemonicParsing="false" onAction="#handleDebugButtonAction" text="Debugging" prefHeight="50" prefWidth="150">
-            <font>
-                <Font size="20.0"/>
-            </font>
-        </Button>
+<!--        <Button mnemonicParsing="false" onAction="#handleDebugButtonAction" text="Debugging" prefHeight="50" prefWidth="150">-->
+<!--            <font>-->
+<!--                <Font size="20.0"/>-->
+<!--            </font>-->
+<!--        </Button>-->
     </children>
 </VBox>
