--- a/src/main/resources/com/example/ecrhub/fxml/connect.fxml
+++ b/src/main/resources/com/example/ecrhub/fxml/connect.fxml
@@ -16,7 +16,7 @@
             <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
                 <HBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
                     <Button mnemonicParsing="false" text="Refresh" fx:id="refreshButton" disable="true" onAction="#getUnpairedInfo"/>
-                    <Button mnemonicParsing="false" text="Pairing" fx:id="pairedButton" disable="true" onAction="#pairingButtonAction"/>
+<!--                    <Button mnemonicParsing="false" text="Pairing" fx:id="pairedButton" disable="true" onAction="#pairingButtonAction"/>-->
                 </HBox>
                 <HBox alignment="CENTER_LEFT">
                     <Label text="Available Devices :" />
